29.OPA-Gatekeeper/opa-gatekeeper-demo/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opa
  labels:
    name: opa
    admission: enabled
