29.OPA-Gatekeeper/opa-gatekeeper-demo/manifests/05-webhook-configuration-corrected.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: opa-validating-webhook
  labels:
    app: opa
webhooks:
  - name: validating-webhook.opa.example.com
    clientConfig:
      service:
        namespace: opa
        name: opa
        path: /v1/data/system/main
        port: 8181
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURBekNDQWV1Z0F3SUJBZ0lVQ0JHVWt1L3ZScXgwUkd3ZitCclBMME84R1NJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0VURVBNQTBHQTFVRUF3d0diM0JoTFdOaE1CNFhEVEkxTVRBeU1URTBNREV4TVZvWERUTTFNVEF4T1RFMApNREV4TVZvd0VURVBNQTBHQTFVRUF3d0diM0JoTFdOaE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBCk1JSUJDZ0tDQVFFQXZzb3RaRnYwbVpJMGg3S3c0TEc1OTMyQ3c1NXRqb0NkeVVvR1F5ZXA2ZzlMUkRJSnY2cVgKZ1lYRG8vZUttZi85ZHE2S2wycUNKOFpCbldoeTR6NVVPdG1aN2dZclFQSEZianczZ3Q5bGpDVmxxc0Q5T0RRYQo3cVhUWnU3S2Jz [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods", "deployments"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Fail
